#
#   PSYCHOSYNTH
#   ===========
#              
#   Copyright (C) 2007, 2008 by Juan Pedro Bolivar Puente
#                                                        
#   This program is free software: you can redistribute it and/or modify
#   it under the terms of the GNU General Public License as published by
#   the Free Software Foundation, either version 3 of the License, or
#   (at your option) any later version.
#                                      
#   This program is distributed in the hope that it will be useful,
#   but WITHOUT ANY WARRANTY; without even the implied warranty of
#   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#   GNU General Public License for more details.
#
#   You should have received a copy of the GNU General Public License
#   along with this program.  If not, see <http://www.gnu.org/licenses/>.
#

pkgdatadir = @PACKAGE_DATA_DIR@

nobase_pkgdata_DATA = \
	ogre.cfg \
	plugins.cfg \
	$(wildcard gui/*.xsd)\
	$(wildcard gui/*.tga)\
	$(wildcard gui/*.imageset)\
	$(wildcard gui/*.looknfeel)\
	$(wildcard gui/*.scheme)\
	$(wildcard gui/*.layout)\
	$(wildcard gui/*.tff)\
	$(wildcard gui/*.font)\
	$(wildcard material/*.material)\
	$(wildcard mesh/*.mesh)\
	$(wildcard texture/*.tga)\
	$(wildcard samples/*.wav)\
	$(wildcard samples/*.ogg)\
	gui/DejaVuSans.ttf

EXTRA_DIST = $(nobase_pkgdata_DATA)

